--- a/demo/index.html
+++ b/demo/index.html
@@ -16,11 +16,11 @@
     </style>
   </head>
   <body>
-    <div class="vertical-section-container centered">
+    <div class="vertical-section-container">
       <h3>Basic promo-tile demo</h3>
       <demo-snippet>
         <template>
-          <promo-tile></promo-tile>
+          <promo-tile title="Virtual Reality" image="https://www.wallpaperflare.com/static/739/747/773/intel-project-alloy-vr-idf-virtual-reality-wallpaper.jpg"></promo-tile>
         </template>
       </demo-snippet>
     </div>
