--- a/promo-tile.html
+++ b/promo-tile.html
@@ -2,6 +2,9 @@
 <link rel="import" href="../materializecss-styles/materializecss-styles.html">
 <link rel="import" href="../hax-body-behaviors/hax-body-behaviors.html">
 <link rel="import" href="../schema-behaviors/schema-behaviors.html">
+<link rel="import" href="../paper-button/paper-button.html">
+<link rel="import" href="../iron-icon/iron-icon.html">
+
 <!--
 `promo-tile`
 A LRN element
@@ -20,27 +23,33 @@ A LRN element
       :host {
         display: block;
         --tile-image: '';
-        width: 474px;
+        --font-color: #fff;
+        --hover-background-color: #e2801e;
+        --hover-link: #e0e0e0;
+      }
+
+      a {
+        text-decoration: none;
+      }
+
+      #container {
+        width: 100%;
+        height: auto;
       }
 
       .back_card {
-        background-color: orange;
+        background-color: var(--hover-background-color);
         height: 460px;
         opacity: 0;
 
       }
 
-      #container .back_card:hover {
-        opacity: 0.8;
+      :host[hover] #container .back_card {
+        opacity: 0.9;
         transition: all .3s ease-in-out;
       }
 
       #container .front_card:hover .front_title {
-        opacity: 0;
-        transition: all .3s ease-in-out;
-      }
-
-      #container .front_card:hover .front_title_border {
         opacity: 0;
         transition: all .3s ease-in-out;
       }
@@ -57,52 +66,72 @@ A LRN element
 
       .front_title {
         opacity: 1;
-        text-align: center;
-        font-size: 36px;
-        color: #fff;
-        position: absolute;
-        top: 460px;
-        left: 170px;
-      }
-
-      .front_title_border {
-        border-top: solid 5px #fff;
+        float: left;
+        margin: 375px 0 0 25px;
+        font-size: 2.5em;
+        color: var(--font-color);
+        border-bottom: solid 5px #fff;
         border-radius: 5px;
-        width: 4%;
-        position: absolute;
-        top: 450px;
-        left: 170px;
+        padding-bottom: 5px;
       }
 
       .back_title {
         opacity: 1;
-        text-align: center;
-        font-size: 36px;
-        color: #fff;
-        position: absolute;
+        font-size: 2.5em;
+        color: var(--font-color);
+        float: left;
+        margin: -390px 0 0 25px;
+        border-bottom: solid 5px #fff;
+        border-radius: 5px;
+        padding-bottom: 5px;
       }
 
-      .back_title_border {
-        border-top: solid 8px #fff;
-        border-radius: 5px;
-        width: 5%;
-        position: absolute;
+      .back_content {
+        color: var(--font-color);
+        font-size: 1em;
+        clear: left;
+        position: relative;
+        bottom: 334px;
+        width: 85%;
+        margin-left: auto;
+        margin-right: auto;
+        padding-top: 10px;
+      }
+
+      .learn_more {
+        float: right;
+        margin-top: -75px;
+        font-size: 1em;
+        color: var(--font-color);
+        margin-right: 10px;
+      }
+
+      :host[hover] .learn_more paper-button {
+        color: var(--hover-link);
       }
     </style>
 
-
     <div id="container">
       <div class="front_card">
-        <div class="front_title_border"></div>
         <div class="front_title">[[title]]</div>
-        <div id="front_image" class="image">
-          <div class="back_card">
-            <div class="back_title_border"></div>
+        <div id="front_image" class="image" alt="[[alt]]">
+          <div class="back_card" id="cardBack" on-click="activateBtn">
             <div class="back_title">[[title]]</div>
+            <div class="back_content">
+              <slot></slot>
+            </div>
+            <div class="learn_more">
+              <a href="[[url]]" id="link" target$="[[_urlTarget(url)]]">
+                <paper-button noink>Learn More
+                  <iron-icon icon="chevron-right"></iron-icon>
+                </paper-button>
+              </a>
+            </div>
           </div>
         </div>
       </div>
     </div>
+
 
 
   </template>
@@ -114,7 +143,7 @@ A LRN element
       behaviors: [HAXBehaviors.PropertiesBehaviors, MaterializeCSSBehaviors.ColorBehaviors, SchemaBehaviors.Schema],
       properties: {
         /**
-         * Image
+         * Image source
          */
         image: {
           type: String,
@@ -122,17 +151,50 @@ A LRN element
           reflectToAttribute: true,
         },
         /**
-         * Title
+         * Alt text for image
+         */
+        alt: {
+          type: String,
+          value: '',
+          reflectToAttribute: true,
+        },
+        /**
+         * Title of tile
          */
         title: {
           type: String,
           value: '',
           reflectToAttribute: true,
         },
+        /**
+          * Url for tile
+          */
+        url: {
+          type: String,
+          value: '',
+          reflectToAttribute: true,
+        },
+        /**
+          * Hover state
+          */
+        hover: {
+          type: Boolean,
+          value: false,
+          reflectToAttribute: true,
+        },
+
+
       },
       observers: [
         '__updateStyles(image)'
       ],
+
+      listeners: {
+        'mouseover': '__hoverState',
+        'mouseout': '__hoverState',
+      },
+
+
       /**
        * Attached to the DOM, now fire.
        */
@@ -143,19 +205,21 @@ A LRN element
           'canPosition': true,
           'canEditSource': false,
           'gizmo': {
-            'title': 'Sample gizmo',
-            'description': 'The user will be able to see this for selection in a UI.',
-            'icon': 'av:play-circle-filled',
-            'color': 'grey',
-            'groups': ['Video', 'Media'],
+            'title': 'Promo-Tile',
+            'description': 'A tile element for promoting content.',
+            'icon': 'icons:dashboard',
+            'color': 'orange',
+            'groups': ['Content', 'Media'],
             'handles': [
               {
-                'type': 'video',
-                'url': 'source'
+                'type': 'content',
+                'source': 'image',
+                'title': 'citation',
+                'url': 'source',
               }
             ],
             'meta': {
-              'author': 'Your organization on github'
+              'author': 'LRNWebComponents'
             }
           },
           'settings': {
@@ -163,18 +227,53 @@ A LRN element
               {
                 'property': 'title',
                 'title': 'Title',
-                'description': 'The title of the element',
+                'description': 'The title of the tile',
                 'inputMethod': 'textfield',
                 'icon': 'editor:title',
+              },
+              {
+                'property': 'image',
+                'title': 'Image',
+                'description': 'The image of the tile',
+                'inputMethod': 'textfield',
+                'icon': 'editor:insert-photo',
+              },
+              {
+                'property': 'url',
+                'title': 'Link',
+                'description': 'The link of the tile',
+                'inputMethod': 'textfield',
+                'icon': 'editor:insert-link',
               },
             ],
             'configure': [
               {
                 'property': 'title',
                 'title': 'Title',
-                'description': 'The title of the element',
+                'description': 'The title of the tile',
                 'inputMethod': 'textfield',
                 'icon': 'editor:title',
+              },
+              {
+                'property': 'image',
+                'title': 'Image',
+                'description': 'The image of the tile',
+                'inputMethod': 'textfield',
+                'icon': 'editor:insert-photo',
+              },
+              {
+                'property': 'alt',
+                'title': 'Alt',
+                'description': 'The alt text for the image',
+                'inputMethod': 'textfield',
+                'icon': 'editor:mode-edit',
+              },
+              {
+                'property': 'url',
+                'title': 'Link',
+                'description': 'The link of the tile',
+                'inputMethod': 'textfield',
+                'icon': 'editor:insert-link',
               },
             ],
             'advanced': [
@@ -186,9 +285,41 @@ A LRN element
 
       __updateStyles: function (image) {
         this.customStyle['--tile-image'] = `url(${image})`;
-        console.log(image);
         this.updateStyles();
       },
+
+      /**
+       * Internal function to check if a url is external
+       */
+      _outsideLink: function (url) {
+        if (url.indexOf('http') != 0) return false;
+        var loc = location.href, path = location.pathname,
+          root = loc.substring(0, loc.indexOf(path));
+        return url.indexOf(root) != 0;
+      },
+
+      /**
+       * If url is external, open link in new window, otherwise open link in same window.
+       */
+      _urlTarget: function (url) {
+        if (url) {
+          const external = this._outsideLink(url);
+          if (external) {
+            return "_blank";
+          }
+        }
+        return false;
+      },
+      activateBtn: function () {
+        if (this.hover) {
+          const link = this.$.link;
+          link.click();
+        }
+      },
+      __hoverState: function () {
+        this.hover = !this.hover;
+        console.log(this.hover);
+      }
     });
   </script>
 </dom-module>
