--- a/promo-tile.html
+++ b/promo-tile.html
@@ -44,7 +44,10 @@ A LRN element
 
       }
 
-      :host[hover] #container .back_card {
+      /* TO DO: Check into better focus management / accessibility. */
+
+      :host[hover] #container .back_card,
+      :host:focus-within #container .back_card {
         opacity: 0.9;
         transition: all .3s ease-in-out;
       }
@@ -109,8 +112,6 @@ A LRN element
       :host[hover] .learn_more paper-button {
         color: var(--hover-link);
       }
-
-
     </style>
 
     <div id="container">
