small css adjustments

--- a/promo-tile.html
+++ b/promo-tile.html
@@ -94,6 +94,7 @@ A LRN element
       @media screen and (max-width: 700px) {
         .front_title {
           font-size: 2em;
+          padding-bottom: 14px;
         }
       }
 
@@ -117,7 +118,7 @@ A LRN element
         font-size: 1em;
         text-align: center;
         padding: 0 15px;
-        font-size: 20px;
+        font-size: 1.2em;
         font-weight: 100;
       }
 
@@ -125,7 +126,7 @@ A LRN element
         display: flex;
         justify-content: center;
         position: relative;
-        bottom: -50px;
+        bottom: -20px;
       }
 
       paper-button#learn {
